--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_margin="8dp"
+        android:inputType="text"
+        android:gravity="right"
+        android:editable="false"
+        android:focusable="false" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:columnCount="4"
+        android:orientation="horizontal">
+
+        <!-- Цифры -->
+        <Button
+            android:id="@+id/button1"
+            android:layout_columnWeight="1"
+            android:text="1" />
+        <Button
+            android:id="@+id/button2"
+            android:layout_columnWeight="1"
+            android:text="2" />
+        <Button
+            android:id="@+id/button3"
+            android:layout_columnWeight="1"
+            android:text="3" />
+        <Button
+            android:id="@+id/buttonPlus"
+            android:layout_columnWeight="1"
+            android:text="+" />
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_columnWeight="1"
+            android:text="4" />
+        <Button
+            android:id="@+id/button5"
+            android:layout_columnWeight="1"
+            android:text="5" />
+        <Button
+            android:id="@+id/button6"
+            android:layout_columnWeight="1"
+            android:text="6" />
+        <Button
+            android:id="@+id/buttonMinus"
+            android:layout_columnWeight="1"
+            android:text="-" />
+
+        <Button
+            android:id="@+id/button7"
+            android:layout_columnWeight="1"
+            android:text="7" />
+        <Button
+            android:id="@+id/button8"
+            android:layout_columnWeight="1"
+            android:text="8" />
+        <Button
+            android:id="@+id/button9"
+            android:layout_columnWeight="1"
+            android:text="9" />
+        <Button
+            android:id="@+id/buttonMultiply"
+            android:layout_columnWeight="1"
+            android:text="*" />
+
+        <Button
+            android:id="@+id/buttonClear"
+            android:layout_columnSpan="2"
+            android:layout_columnWeight="1"
+            android:text="C" />
+        <Button
+            android:id="@+id/button0"
+            android:layout_columnWeight="1"
+            android:text="0" />
+        <Button
+            android:id="@+id/buttonEquals"
+            android:layout_columnWeight="1"
+            android:text="=" />
+        <Button
+            android:id="@+id/buttonDivide"
+            android:layout_columnWeight="1"
+            android:text="/" />
+    </GridLayout>
+</LinearLayout>
